--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Github</title>
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background: #333;
+            color: #fff;
+            font-style: italic;
+        }
+    </style>
 </head>
 <body>
     <h1>Hello World</h1>
