--- a/index.html
+++ b/index.html
@@ -10,13 +10,24 @@
             justify-content: center;
             align-items: center;
             background: #333;
-            color: #fff;
             font-style: italic;
+        }
+        h1{
+            position: relative;
+            font-size: 100px;
+            color: red;
+            font-weight: 300;
+        }
+        p{
+            display: inline-block;
+            color: pink;
+            font-size: 30px;
+            font-weight: 300;
         }
     </style>
 </head>
 <body>
     <h1>Hello World</h1>
-    <p>I'm hosting Github Pages</p>
+    <p>Welcome to my test page</p>
 </body>
 </html>
