--- a/index.html
+++ b/index.html
@@ -24,10 +24,15 @@
             font-size: 30px;
             font-weight: 300;
         }
+        img{
+            width:100px;
+            height: 100px;
+        }
     </style>
 </head>
 <body>
     <h1>Hello World</h1><br>
     <p>Welcome to my test page</p>
+    <img src="154354_10150104995153408_5238540_n.jpg">
 </body>
 </html>
