--- a/index.html
+++ b/index.html
@@ -12,27 +12,36 @@
             background: #333;
             font-style: italic;
         }
-        h1{
+        .hello{
+            position: relative;
+            font-family: Arial;
+        }
+        .hello h1{
             position: relative;
             font-size: 100px;
             color: red;
             font-weight: 300;
         }
-        p{
+        .hello p{
             display: inline-block;
             color: pink;
             font-size: 30px;
             font-weight: 300;
         }
         img{
+            display: flex;
+            justify-content: center;
+            align-items: center;
             width:100px;
             height: 100px;
         }
     </style>
 </head>
 <body>
+    <div class="Hello">
     <h1>Hello World</h1><br>
     <p>Welcome to my test page</p>
+    </div>
     <img src="154354_10150104995153408_5238540_n.jpg">
 </body>
 </html>
